src/app/App.scss
// Importing Global Variables
@import '~@redhat-cloud-services/frontend-components/index.css';
@import '~@redhat-cloud-services/frontend-components-notifications/index.css';

.pf-c-wizard__main-body {
  max-height: 100%;
}

.page__notifications#root {
  --pf-c-page__main-section--BackgroundColor: var(--pf-t--temp--dev--tbd /* CODEMODS: original v5 color was:--pf-v5-global--Color--light-100 */);
}

.pf-c-card__cover-image {
  position: relative;
  background-image: url('../assets/images/notifications-image.svg');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: right bottom;
  border: var(--pf-t--global--spacer--lg) solid transparent;
}

.noti-c-card-getting-started {
  .pf-c-expandable-section {
    &__toggle {
      border-bottom: 1px solid var(--pf-t--temp--dev--tbd /* CODEMODS: original v5 color was:--pf-v5-global--disabled-color--200 */);
      padding: var(--pf-t--global--spacer--md) 0 var(--pf-t--global--spacer--lg) var(--pf-t--global--spacer--md);
      width: 100%;
    }
    &__toggle-icon {
      padding-top: var(--pf-t--global--spacer--xs);
    }
    &__toggle-text {
      color: var(--pf-t--temp--dev--tbd /* CODEMODS: original v5 color was:--pf-v5-global--Color--100 */);
      font-size: var(--pf-t--global--font--size--lg);
    }
    &__content {
      margin-top: 0;
      .pf-c-icon__content {
        --pf-c-icon__content--Color: var(--pf-t--temp--dev--tbd /* CODEMODS: original v5 color was:--pf-v5-global--primary-color--100 */);
      }
    }
  }
}

.noti-c-card-configure {
  border-left: 1px solid var(--pf-t--temp--dev--tbd /* CODEMODS: original v5 color was:--pf-v5-global--disabled-color--200 */);
}

.noti-c-table-border-top {
  border-top: var(--pf-c-table--border-width--base) solid var(--pf-c-table--BorderColor);
}

